MODON MRE BPDEV/force-app/main/default/objects/Power_of_Attorney__c/Power_of_Attorney__c.object-meta.xml
<CustomObject>
    <label>Power of Attorney</label>
    <nameField>
        <displayFormat>POA-{0000}</displayFormat>
        <label>Power of Attorney Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Power of Attorneys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>