MODON MRE BPDEV/force-app/main/default/objects/Power_of_Attorney__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Power of Attorneys</relationshipLabel>
    <relationshipName>Power_of_Attorneys</relationshipName>
    <type>Lookup</type>
</CustomField>