MODON MRE BPDEV/force-app/main/default/objects/Power_of_Attorney__c/fields/EmiratesIDExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>EmiratesIDExpiryDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EmiratesIDExpiryDate</label>
    <type>Date</type>
</CustomField>