MODON MRE BPDEV/force-app/main/default/objects/Power_of_Attorney__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Power of Attorneys</relationshipLabel>
    <relationshipName>Power_of_Attorneys</relationshipName>
    <type>Lookup</type>
</CustomField>