MODON MRE BPDEV/force-app/main/default/objects/Power_of_Attorney__c/fields/Organization_Account__c.field-meta.xml
<CustomField>
    <fullName>Organization_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Power of Attorneys</relationshipLabel>
    <relationshipName>Power_of_Attorneys</relationshipName>
    <type>Lookup</type>
</CustomField>