MODON MRE BPDEV/force-app/main/default/objects/Power_of_Attorney__c/fields/POA_Authorization_Date__c.field-meta.xml
<CustomField>
    <fullName>POA_Authorization_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Authorization Date</label>
    <type>DateTime</type>
</CustomField>