MODON MRE BPDEV/force-app/main/default/objects/Power_of_Attorney__c/fields/POA_Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>POA_Authorization_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Authorization Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>