MODON MRE BPDEV/force-app/main/default/objects/Power_of_Attorney__c/fields/POA_Place_of_Issuance__c.field-meta.xml
<CustomField>
    <fullName>POA_Place_of_Issuance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Place of Issuance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>