MODON MRE BPDEV/force-app/main/default/objects/Power_of_Attorney__c/fields/POA_Registration_Authority__c.field-meta.xml
<CustomField>
    <fullName>POA_Registration_Authority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Registration Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>